update swagger model
